# SimpleRunner

./: .gitignore  CMakeLists.txt  README.md  build_full.bat  temp.md
src/: main.cpp
src/core/: Config.h  Game.cpp  Game.h
src/entities/: Bullet.cpp  Bullet.h  Obstacle.cpp  Obstacle.h  ObstacleParticle.cpp  ObstacleParticle.h  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h
src/systems/: ScoreSystem.cpp  ScoreSystem.h
src/utils/: ResourceManager.cpp  ResourceManager.h
